hphp/test/zend/bad/ext/reflection/tests/ReflectionExtension_getDependencies_basic.php
<?php
$dom = new ReflectionExtension('dom');
var_dump($dom->getDependencies());
?>
==DONE==
